--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sqflite_migration_plan
 description: Flexible migrations for sqflite with a clear concise syntax.
-version: 0.0.1
+version: 0.1.0-nullsafety.1
 homepage: https://github.com/ilikerobots/sqflite_migration_plan
 
 environment:
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: 2.0.0
+  sqflite: ^2.0.0
   logging: ^1.0.0
 
 dev_dependencies:
@@ -18,6 +18,8 @@ dev_dependencies:
     sdk: flutter
   path_provider: ^2.0.0-nullsafety.1
   test: ^1.15.7
+  path:
+  sqflite_common:
   sqflite_common_ffi:
 
 # The following section is specific to Flutter.
