--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: sqflite_migration_plan
 description: Flexible migrations for sqflite with a clear concise syntax.
-version: 0.1.0-nullsafety.2
+version: 0.1.0
 homepage: https://github.com/ilikerobots/sqflite_migration_plan
 
 environment:
-  sdk: '>=2.12.0-259.12.beta <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
